styles/globals.css
@import 'reset.css';
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Space+Grotesk:wght@400;500;600;700&display=swap');

/* -- Variables -- */

:root {
  /* Colors */
  --color-primary:#BD42B2;
  --color-primary-hover:#DF54D3;
  --color-primary-bg:#ffe0fc;
  --color-secondary:#111827;
  --color-secondary-hover:#283552;
  --color-secondary-bg:#e2ebff;
  --color-border:rgba(0, 0, 0, 0.05);
  --color-base: #1a1a1a;
  --color-bg:#ffffff;
  --color-bg-primary: #FAF9F7;

  /* Typography */
  --font-base:'Inter', sans-serif;
  --font-display:'Space Grotesk', sans-serif;
  --font-size-body: 1rem;
  --font-size-large: 1.25rem;
  --font-size-small: 0.85rem;

  /* Border */
  --border-radius: 8px;
  --border-radius-large: 16px;
  --border-radius-small: 4px;

  /* Box-shadow */
  --box-shadow: 0 4px 8px -2px rgba(0, 0, 0, 0.045);
  --box-shadow-large: 0 4px 16px -2px rgba(0, 0, 0, 0.075);
  --box-shadow-small: 0 4px 4px -2px rgba(0, 0, 0, 0.025);

  /* State */
  --color-error: #DC2626;
  --color-error-bg: #ffd0d0;
  --color-warning: #F59E0B;
  --color-warning-bg: #ffdfa8;
  --color-success: #159F02;
  --color-success-bg: #d1f0cd;
  --color-info: #419AE3;
  --color-info-bg: #addaff;

  /* State impact */
  --color-critical: #700000;
  --color-critical-bg: #ee7878;
  --color-serious: var(--color-error);
  --color-serious-bg: var(--color-error-bg);
  --color-moderate: #D97706;
  --color-moderate-bg: #FEF3C7;
  --color-minor: #d9b206;
  --color-minor-bg: #fffbd8;
  --color-validated: var(--color-success);
  --color-validated-bg: var(--color-success-bg);
  --color-nc: var(--color-secondary);
  --color-nc-bg: var(--color-secondary-bg);

  /* Layout */
  --grid-gutter-width: 15px;
 
  /* Containers widths */
  --container-mobile:         360px;
  --container-tablet:         750px;
  --container-desktop:        970px;
  --container-lg-desktop:     1230px;
  --container-xl-desktop:     1470px;
  --container-xxl-desktop:    1710px;
  --container-wide:           100vw;
}

/* -- Base -- */
body {
  font-size: var(--font-size-body);
  color: var(--color-base);
  min-height: 100vh;
  background-color: var(--color-bg-primary);
}

h1, h2, h3, h4, h5, h6 {
  margin-bottom: 1rem;
  letter-spacing: -1px;
  font-family: var(--font-display);
}

h1 {
  font-size: 2.375rem;
  line-height: 1.1;
  font-family: 'Space Grotesk', sans-serif;
  font-weight: 500;
}

h2 {
  font-size: 2.125rem;
  line-height: 40px;
}

h3 {
  font-size: 1.25rem;
  line-height: 40px;
}

button {
  all: unset;
  padding: 8px;
}

button:hover {
  cursor: pointer;
}

a {
  color: var(--color-primary);
}

a:hover {
  color: var(--color-primary-hover);
}

/* -- Badges -- */
.badge {
  display: inline-flex;
  column-gap: .25rem;
  align-items: center;
  border-radius: var(--border-radius-large);
  background-color: var(--color-secondary-bg);
  color: var(--color-secondary);
  font-size: var(--font-size-small);
  margin-bottom: .5rem;
  padding: .15rem .5rem;
}

.badge:before {
  display: block;
  content: '';
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin-top: 1px;
  background-color: var(--color-secondary);
}

.badge-error {
  background-color: var(--color-error-bg);
  color: var(--color-error)
}

.badge-error:before {
  background-color: var(--color-error);
}

.badge-warning {
  background-color: var(--color-warning-bg);
  color: var(--color-warning)
}

.badge-warning:before {
  background-color: var(--color-warning);
}

.badge-success {
  background-color: var(--color-success-bg);
  color: var(--color-success)
}

.badge-success:before {
  background-color: var(--color-success);
}

.badge-info {
  background-color: var(--color-info-bg);
  color: var(--color-info)
}

.badge-info:before {
  background-color: var(--color-info);
}

/* -- Impact -- */
.badge-critical {
  background-color: var(--color-critical-bg);
  color: var(--color-critical)
}

.badge-critical:before {
  background-color: var(--color-critical);
}

.badge-serious  {
  background-color: var(--color-serious-bg);
  color: var(--color-serious)
}

.badge-serious:before {
  background-color: var(--color-serious);
}

.badge-moderate  {
  background-color: var(--color-moderate-bg);
  color: var(--color-moderate)
}

.badge-moderate:before {
  background-color: var(--color-moderate);
}

.badge-minor  {
  background-color: var(--color-minor-bg);
  color: var(--color-minor)
}

.badge-minor:before {
  background-color: var(--color-minor);
}

.badge-validated  {
  background-color: var(--color-validated-bg);
  color: var(--color-validated)
}

.badge-validated:before {
  background-color: var(--color-validated);
}

.badge-nc  {
  background-color: var(--color-nc-bg);
  color: var(--color-nc)
}

.badge-nc:before {
  background-color: var(--color-nc);
}

/* -- Containers -- */
.container, 
.container-wide, 
.container-medium {
  width: 100%;
  height: 100%;
  margin-right: auto;
  margin-left: auto;
  padding-right: var(--grid-gutter-width);
  padding-left: var(--grid-gutter-width);
}
 
@media screen and (min-width: 360px) {
  .container {
    max-width: var(--container-mobile);
  }
}
 
@media screen and (min-width: 768px) {
  .container {
    max-width: var(--container-tablet);
  }
}
 
@media screen and (min-width: 992px) {
  .container {
    max-width: var(--container-desktop);
  }
}
 
@media screen and (min-width: 1200px) {
  .container {
    max-width: var(--container-lg-desktop);
  }

  .container-wide {
    max-width: var(--container-desktop);
  }

  .container-medium {
    max-width: var(--container-tablet);
  }
}
 
@media screen and (min-width: 1440px) {
  .container {
    max-width: var(--container-xl-desktop);
  }

  .container-wide {
    max-width: var(--container-lg-desktop);
  }

  .container-medium {
    max-width: var(--container-desktop);
  }
}
 
@media screen and (min-width: 1920px) {
  .container {
    max-width: var(--container-xxl-desktop);
  }

  .container-wide {
    max-width: var(--container-xl-desktop);
  }

  .container-medium {
    max-width: var(--container-lg-desktop);
  }
}
 
:global(.ant-modal-footer) {
  display: none !important;
}

:global(.ant-modal-content) {
  padding-bottom: 24px; 
}

